Search icon misaligned after I removed the 10px margin from the header search box. Fix by changing 'right' value.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@
    background-color: transparent;
    width: 20px;
    height: 20px;
-   right: 15px;
+   right: 5px;
    top: 8px;
    span {
      color: grey;
